# mathexpr

./: .gitignore  Cargo.toml  readme.md
docs/: architecture.md
src/: error.rs  evaluator.rs  expr.rs  lib.rs  main.rs  parser.rs
src/token/: mod.rs  tokenizer.rs
